--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#index.html">Home</a></li>
+          <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Speakers</a></li>
           <li><a href="#portfolio">Schedule</a></li>
