--- a/index.html
+++ b/index.html
@@ -846,8 +846,20 @@ var x = setInterval(function() {
 
         </div> -->
         <div class="">
+          <div class="">
+            <div class="text-center sponsor-head-title container" >
+              <h2>Title Sponsors</h2>
+            </div>
+              <!-- <div class="supporter-logo"></div> -->
+              <center>
+                <img src="assets/img/clients/github-logo-1.png"  class="img-fluid" alt="">
+              </center>
+              <center>
+                <img src="assets/img/clients/spaces_-LX2wpUXI1eWMY46nkHR_avatar-rectangle.png"  class="img-fluid" alt="">
+              </center>
+
           <div class="text-center sponsor-head-title container">
-            <h2>Gold Spronsors</h2>
+            <h2>Gold Sponsors</h2>
           </div>
           <!-- sponsors start -->
           <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
@@ -896,6 +908,18 @@ var x = setInterval(function() {
 
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="supporter-logo">
+                <img src="assets/img/clients/dot-XYZ-logo.jpg" class="img-fluid" alt="">
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="supporter-logo">
+                <img src="assets/img/clients/x_icon_4x.png" class="img-fluid" alt="">
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="supporter-logo">
                 <img src="assets/img/clients/9.svg" class="img-fluid" alt="">
               </div>
             </div>
@@ -906,6 +930,15 @@ var x = setInterval(function() {
 
         <br>
         <div class="">
+          <div class="text-center sponsor-head-title container" >
+            <h2>Community Partner</h2>
+          </div>
+            <!-- <div class="supporter-logo"></div> -->
+            <center>
+              <img src="assets/img/clients/headstart logo-01.png"  class="img-fluid" alt="">
+            </center>
+
+            <div class="">
           <div class="text-center sponsor-head-title container" >
             <h2>Gifting Partner</h2>
           </div>
