--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
-            <p>
+            <p align="justify">
               HackGujarat is a community-focused virtual Hackathon, designed especially for the needs of the communities, with problem statements centered around the community itself. Whether you are a beginner or an expert, here is the perfect chance to hone and show your skills and witness the competitive yet inclusive developer community around you! In light of the CoronaVirus outbreak, your safety and well-being are our primary concerns. Hence, all the activities related to HackGujarat like workshops, talks, and presentations will also be conducted online/virtually.
             </p>
             <!-- <ul>
