--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>What is HackGujarat?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               HackGujarat is a virtual Hackathon, designed especially for a developer to work in a team, with problems centered around the community itself. Whether you are a beginner or an expert, here is the perfect chance to learn and show your skills and witness the competitive yet inclusive developer community around you! All the activities related to HackGujarat like workshops, talks, and presentations will be conducted online/virtually.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1256,7 +1256,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>Why HackGujarat?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               Gujarati culture is the blend of traditions, beliefs, customs, arts, values and modernization. HackGujarat follows the same culture and seeks for different solutions to various issues the tradition face from time to time. HackGujarat represents the cultural integrity and bond of our tradition. HackGujarat is not only to conduct a Hackathon but to make people aware of our community's issues and solutions that exist currently, along with imbibing competetive skills.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1267,7 +1267,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>How much does it cost?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               HackGujarat is absolutely free to attend! You can participate for free via. the Devfolio link above.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1278,7 +1278,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>What are the tracks for HackGujarat?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               We don’t wanna limit you by providing some problem statements and research about them first. That’s why we have some tracks: Diversity Diversity means the inclusion of all individuals as technology does not discriminate. How can technology help to increase diversity and maintain it? Remotely Working As work from home is becoming is a widespread culture, technology can make the process easier. Any project that makes such an effort will fall into this category. Tech and Health Technology can create sustainable and effective relations between a healthcare professional and the patient. It can also provide a cheaper, faster, and more beneficial solutions to prevent and battle illnesses. Creating Awareness With the increase in the use of technology, the dangers have also increased. Awareness is the first step towards creating a better society and community. Awareness can be social, technical, or general.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1289,7 +1289,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>When will HackGujarat be inaugrated and the submission timeline?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               The HackGujarat hackathon will begin on 29st August 12:00 pm and the projects must be submitted by 1 Sept 5:00 pm.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1300,7 +1300,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>When will the results be announced?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               Results will be announced by 5 September.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1311,7 +1311,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>What if I don't know how to code?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               That is not a problem! A great way to learn how to code is by attending a hackathon. It's an event for like-minded people to share what they are interested in and teach each-other what they are passionate about, whether its coding, electronics or anything else you want to know about. You never know what new skill you might pick up! You can also ask specific questions to our mentors and in the Discord server, where people are there to help. Plus we have planned numerous workshops and talks for you guys to make the learning process better.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1322,7 +1322,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>Can students attend?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               Yes, this is a student-held hackathon only. We would love to have your participation.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1333,7 +1333,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <h4>Why is HackGujarat for you  or Why should you participate in it?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
+            <p align="justify">
               HackGujarat is an Online Hackathon, which means it provides you the opportunity to participate directly from your Home, no fuss of going here and there. Ample Goodies and Swags for every participant.</p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -1584,11 +1584,11 @@ document.addEventListener('DOMContentLoaded', function () {
             </p> -->
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/hackgujarat" target="blank" class="twitter"><i class="fa fa-twitter"></i></a>
+              <!-- <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> -->
+              <a href="https://www.instagram.com/hackgujarat/" target="blank" class="instagram"><i class="fa fa-instagram"></i></a>
+              <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a> -->
+              <a href="https://www.linkedin.com/mwlite/company/hack-gujarat" target="blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
