--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
 
         </div> -->
-        <div class="form" style=" background: url(../img/bg1234.jpg) top center;background-size: cover;" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="form" style=" background: url(../img/bg1234.jpg) top center;background-size: cover;" data-aos="fade-up" data-aos-delay="300">
           <form action="forms/contactus.php" method="post" role="form" class="php-email-form">
             <div class="form-row">
               <div class="form-group col-md-6">
@@ -1448,7 +1448,7 @@ document.addEventListener('DOMContentLoaded', function () {
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
           </form>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Contact Section -->
