--- a/index.html
+++ b/index.html
@@ -990,10 +990,10 @@ document.addEventListener('DOMContentLoaded', function () {
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="col-lg-3 col-md-4 col-xs-6" style="padding-top: 20px ;">
               <div class="supporter-logo">
                 <a href="https://www.framer.com/" target="blank">
-                <img src="assets/img/clients/framer.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/framer-black.png" class="img-fluid" alt="">
               </a>
               </div>
             </div>
