--- a/index.html
+++ b/index.html
@@ -971,6 +971,14 @@ document.addEventListener('DOMContentLoaded', function () {
               </a>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="supporter-logo">
+                <a href="https://www.wolfram.com/language/" target="blank">
+                <img src="assets/img/clients/Wolfram.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
            
            
 
@@ -1088,7 +1096,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
           <div class="col-lg-3 col-md-4 col-xs-6" style="padding-top: 20px;">
             <div class="supporter-logo">
-              <a href=https://www.a2hosting.com/" target="blank">
+              <a href="https://www.a2hosting.com/" target="blank">
               <img src="assets/img/clients/a2-01.png" class="img-fluid" alt="">
             </a>
             </div>
