--- a/index.html
+++ b/index.html
@@ -858,16 +858,16 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="container">
 
         <div class="section-title">
-          <h2>Sponsors</h2>
+          <h2 style="font-size: 32px;">Sponsors</h2>
           <p></p>
         </div>
 
-        <div class="clients clients">
+        <div class="clients">
           <div class="container-fluid">
             <div class="row no-gutters supporters-wrap clearfix container-fluid" data-aos="zoom-in" data-aos-delay="100">
   
-              <div class="col-lg-8 col-md-6 col-xs-6" >
-                <div class="text-center sponsor-head-title-1 container">
+              <div class="col-lg-8 col-md-12 col-xs-12" >
+                <div class="text-center sponsor-head-title-1 container-fluid">
                   <h2>Title Sponsors</h2>
                 </div>
               <div class="" >
@@ -894,7 +894,7 @@ document.addEventListener('DOMContentLoaded', function () {
                 
               </div>
   
-              <div class="col-lg-4 col-md-6 col-xs-6">
+              <div class="col-lg-4 col-md-12 col-xs-12">
                 <div class="text-center sponsor-head-title-1 container-fluid">
                   <h2>Powered By</h2>
                 </div>
