--- a/index.html
+++ b/index.html
@@ -1180,6 +1180,14 @@ document.addEventListener('DOMContentLoaded', function () {
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-4 col-xs-6" >
+            <div class="supporter-logo">
+              <a href="https://taskade.com/press" target="blank">
+              <img src="assets/img/clients/size/taskade.png" class="img-fluid" alt="">
+            </a>
+            </div>
+          </div>
+
          
 
           
