--- a/index.html
+++ b/index.html
@@ -1687,6 +1687,7 @@ document.addEventListener('DOMContentLoaded', function () {
               <a href="https://www.instagram.com/hackgujarat/" target="blank" class="instagram"><i class="fa fa-instagram"></i></a>
               <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a> -->
               <a href="https://www.linkedin.com/mwlite/company/hack-gujarat" target="blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://t.me/hackgujarat" target="blank" class="linkedin"><i class="fa fa-telegram" style="color:white"></i></a>
             </div>
 
           </div>
