Date Change in FAQ

--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
           <div class="col-lg-7">
             <p align="justify">
-              The HackGujarat hackathon will begin on 29st August 12:00 pm and the projects must be submitted by 1 Sept 5:00 pm.</p>
+              The HackGujarat hackathon will begin on 5th September 12:00 pm and the projects must be submitted by 6 Sept 5:00 pm.</p>
           </div>
         </div><!-- End F.A.Q Item-->
 
@@ -1421,7 +1421,7 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
           <div class="col-lg-7">
             <p align="justify">
-              Results will be announced by 5 September.</p>
+              Results will be announced by 10 September.</p>
           </div>
         </div><!-- End F.A.Q Item-->
 
