--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,14 @@ document.addEventListener('DOMContentLoaded', function () {
               </a>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="supporter-logo">
+                <a href="https://www.clerky.com/" target="blank">
+                <img src="assets/img/clients/size/clerky.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
            
 
             
