team update square

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li><a href="#services">Speakers</a></li>
           <li><a href="#portfolio">Schedule</a></li>
           <li><a href="#mentor">Mentors</a></li>
-          <li><a href="#pricing">Sponsers</a></li>
+          <li><a href="#pricing">Sponsors</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#faq">FAQ</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
