--- a/index.html
+++ b/index.html
@@ -1252,6 +1252,14 @@ document.addEventListener('DOMContentLoaded', function () {
               </a>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6" >
+              <div class="supporter-logo">
+                <a href="https://magoosh.com/press/" target="blank">
+                <img src="assets/img/clients/size/magoosh.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
             
           </div>
         
