--- a/index.html
+++ b/index.html
@@ -1193,6 +1193,14 @@ document.addEventListener('DOMContentLoaded', function () {
               </a>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="supporter-logo">
+                <a href="https://bubble.io/" target="blank">
+                <img src="assets/img/clients/size/bubble.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
            
 
             
@@ -2039,7 +2047,7 @@ document.addEventListener('DOMContentLoaded', function () {
               <!-- <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> -->
               <a href="https://www.instagram.com/hackgujarat/" target="blank" class="instagram"><i class="fa fa-instagram"></i></a>
               <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a> -->
-              <a href="https://www.linkedin.com/mwlite/company/hack-gujarat" target="blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/hack-gujarat" target="blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
               <a href="https://t.me/hackgujarat" target="blank" class="linkedin"><i class="bx bxl-telegram" ></i></a>
             </div>
 
