Team Page Added

--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,7 @@ document.addEventListener('DOMContentLoaded', function () {
                
             <div class="icon-box apply-btn" data-aos="fade-up" data-aos-delay="100" >
               <div class="icon"><i class="bx bx-group bx-tada-hover"></i></div>
-              <h4 class="title"><a href="#team">Meet All Members</a></h4>
+             <h4 class="title"><a href="team.html">Meet All Members</a></h4>
               
           </div>
           <!-- bxs-t-shirt bxs-face -->
