--- a/team.html
+++ b/team.html
@@ -81,7 +81,7 @@ background-attachment: fixed;
             <div class="col-lg-6 col-md-6 col-sm-6">
               <center>
                   <div class="card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="face front" style="background: url(assets/img/team/rikin.jpeg);background-size: cover;">
+                    <div class="face front" style="background: url(assets/img/team/r1.jpeg);background-size: cover;">
                     <h2>Rikin<br> Patel</h2>
                   </div>
                   <div class="face back">
