--- a/index.html
+++ b/index.html
@@ -1702,7 +1702,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
         <div class="text-center">
 
-          <a href="#team">
+          <a href="team.html">
                
             <div class="icon-box apply-btn" data-aos="fade-up" data-aos-delay="100" >
               <div class="icon"><i class="bx bx-group bx-tada-hover"></i></div>
