--- a/index.html
+++ b/index.html
@@ -1203,8 +1203,8 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
                     <p style="padding-top: 50px;">Microsoft Learn Student Ambassador<br><span style="font-size:15px;"></span></p>
                     <div class="sm" style="margin-top: 90px;">
                       
-                      <!-- <a href="https://twitter.com/Vel12171" target="blank"><i class="fab fa-twitter"></i></a>
-                      <a href="https://www.linkedin.com/in/veliswa-boya/" target="blank"><i class="fab fa-linkedin"></i></a> -->
+                      <!-- <a href="https://twitter.com/Vel12171" target="blank"><i class="fab fa-twitter"></i></a> -->
+                      <a href="https://www.linkedin.com/in/shashidhar-reddy-javaji/" target="blank"><i class="fab fa-linkedin"></i></a>
                       <a href="mailto:Shashidhar_Reddy@studentambassadors.com" target="blank"><i class="fa fa-envelope"></i></a>
                     </div>  
                     <button type="button" class="modalbtn"  data-toggle="modal" data-target="#shashidhar">Read More</button>
@@ -2105,7 +2105,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
                   <li>Bugsee 100$ Credit for Each Member</li>
                   <li>Free Access Egghead.io Platform</li>
                   <li>Free Dailybot Standard Subscription</li>
-                  <li>Bubble 100$ Credit for Each Member</li>
+                  <li>Bubble 1000$ Credit for Each Member</li>
                   <li>Framer Pro-Team License</li>
                   <li>Swag Kits</li>
                 </ul>
@@ -2223,12 +2223,12 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
                <ul>
                 <li>Unlimited Subscription for Taskade Platform</li>
                 <li>90-Day Extended Trial of Balsamiq Cloud</li>
-                <li>Free Access to Specific Course on Progate</li>
+                <li>Free Access to Git and Go Lessons on Progate</li>
                 <li>Professional Subscription in VoiceFlow</li>
                 <li>3 Month Hacker Plan in Repl.it</li>
                 <li>Free Credits in Wolfram</li>
                 <li>Free Subscription of Jetbrains</li>
-                <li>Free 1 Year Subscription of any .xyz Domain Name</li>
+                <li>Free 1 Year Subscription of .xyz Domain Name</li>
                 <li>Certificate of Participation</li>
                 </ul>
               </div>
