--- a/team.html
+++ b/team.html
@@ -107,7 +107,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
               <center>
                   <div class="card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="face front" style="background: url(assets/img/team/r1.jpeg);background-size: cover;background-position: center;">
+                    <div class="face front" style="background: url(assets/img/team/rik.png);background-size: cover;background-position: center;">
                     <h2>Rikin<br> Patel</h2>
                   </div>
                   <div class="face back">
@@ -156,8 +156,8 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <center>
               <div class="card" data-aos="fade-up" data-aos-delay="200">
-                <div class="face front" style="background: url(assets/img/team/ananya-01.jpeg);background-size: cover;background-position: center;">
-                    <h2>Ananya<br> Yadav</h2>
+                <div class="face front" style="background: url(assets/img/team/anannya1.png);background-size: cover;background-position: center;">
+                    <h2><br>Ananya<br> </h2>
                 </div>
                 <div class="face back">
                   <div class="overlay">
@@ -251,7 +251,7 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <center>
               <div class="card" data-aos="fade-up" data-aos-delay="200">
-                <div class="face front" style="background: url(assets/img/team/ishani-01.jpeg);background-size: cover;background-position: center;">
+                <div class="face front" style="background: url(assets/img/team/ishani.jpeg);background-size: cover;background-position: center;">
                   <h2>Ishani <br> Bharadwaj</h2>
                 </div>
                 <div class="face back">
