--- a/index.html
+++ b/index.html
@@ -494,21 +494,21 @@ document.addEventListener('DOMContentLoaded', function () {
           <h1>We are coming...</h1><br>
           <div class="container">
             <div class="row">
-              <div class="col-lg-2 col-md-2 col-xs-0 col-sm-0">
+              <div class="clo col-lg-2 col-md-2 col-xs-0 col-sm-0">
               </div>
-              <div class="col-lg-2 col-md-2 col-xs-3 col-sm-3">
+              <div class="clo col-lg-2 col-md-2 col-xs-3 col-sm-3">
                 <p id="days"></p>
               </div>
-              <div class="col-lg-2 col-md-2 col-xs-3 col-sm-3">
+              <div class="clo col-lg-2 col-md-2 col-xs-3 col-sm-3">
                 <p id="hours"></p>
               </div>
-              <div class="col-lg-2 col-md-2 col-xs-3 col-sm-3">
+              <div class="clo col-lg-2 col-md-2 col-xs-3 col-sm-3">
                 <p id="minutes"></p>
               </div>
-              <div class="col-lg-2 col-md-2 col-xs-3 col-sm-3">
+              <div class="clo col-lg-2 col-md-2 col-xs-3 col-sm-3">
                 <p id="seconds"></p>
               </div>
-              <div class="col-lg-2 col-md-2 col-xs-0 col-sm-0">
+              <div class="clo col-lg-2 col-md-2 col-xs-0 col-sm-0">
                 </div>
 
             </div>
