Team Page Updated

--- a/team.html
+++ b/team.html
@@ -302,16 +302,16 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
               <center>
                   <div class="card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="face front" style="background: url(assets/img/team/nandini.jpeg);background-size: cover;background-position: center;">
+                    <div class="face front" style="background: url(assets/img/team/nandini-02.jpeg);background-size: cover;background-position: center;">
                     <h2>Nandini<br> Sharma</h2>
                   </div>
                   <div class="face back">
                     <div class="overlay">
                       <p>Follow&nbsp;Me</p>
                       <div class="sm">
-                        <a href="#" target="blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com/Nandini3120" target="blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/nansha3120/" target="blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="http://www.instagram.com/be__you__nique" target="blank"><i class="fab fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
