--- a/index.html
+++ b/index.html
@@ -2113,7 +2113,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header" style="background:url(assets/img/bg111.jpg);background-size: contain;">
-                <h4 class="modal-title" style="color: white;font-weight: bold;">Manindar Singh<br>(iOS Developer)</h4>
+                <h4 class="modal-title" style="color: white;font-weight: bold;">Maninder Singh<br>(iOS Developer)</h4>
                 <button type="button" class="close" data-dismiss="modal" style="outline: none;color: white;opacity: 0.8;">&times;</button>
               
               </div>
