Event Schedule Updated

--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
 
         <div class="section-title" data-aos="fade-up">
           <h2>EVENT SCHEDULE</h2>
-  <section class="cd-horizontal-timeline">
+  <section class="cd-horizontal-timeline"  style="padding-top: 0px;">
   <div class="timeline">
     <div class="events-wrapper">
       <div class="events">
@@ -1293,7 +1293,7 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
       </li>
 
       <li  data-date="30/08/2020" >
-        <div id="ee"class="icon-box apply-btn" >
+        <div id="ee"class="icon-box apply-btn" onMouseOut="this.style.color='green'">
             
             <h4 style="color:black;" class="title">Speaker Name: Prasad Seth</h4><br>
             <h4 style="color:black;" class="title">Session Name: "How Collaborative Resources Helps To Win A Hackathon"</h4><br>
@@ -1322,7 +1322,9 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
 
       <li  data-date="01/09/2020">
         <div class="icon-box apply-btn" data-aos="fade-up" data-aos-delay="100" >
-            <h4 style="color:black;" class="title">Comming Soon...</h4><br>
+            <h4 style="color:black;" class="title">Speaker Name: Seema Saharan </h4><br>
+            <h4 style="color:black;" class="title">Session Name: "Introduction to Open Source"</h4><br>
+            <h4 style="color:black;" class="title">Timings: IST 6:00PM</h4><br>
 
 
           
