--- a/index.html
+++ b/index.html
@@ -2914,7 +2914,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
                   <li>Clerky Lifetime Plan worth 799$</li>
                   <li>Exclusive Mentorship Seminar by HeadStart</li>
                   <li>Bugsee 100$ Credit for Each Member</li>
-                  <li>Free Access Egghead.io Platform</li>
+                  <li>Free Access Egghead.io Platform x 2</li>
                   <li>Free Dailybot Standard Subscription</li>
                   <li>Bubble 1000$ Credit for Each Member</li>
                   <li>Framer Pro-Team License</li>
@@ -2942,7 +2942,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
                   <li>Wolfram Award [ Each Member ]</li>
                   <li>Exclusive Mentorship Seminar by HeadStart</li>
                   <li>Bugsee 100$ Credit for Each Member</li>
-                  <li>Free Access Egghead.io Platform</li>
+                  <li>Free Access Egghead.io Platform x 2</li>
                   <li>Free Dailybot Standard Subscription</li>
                   <li>Framer Pro-Team License</li>
                   <li>Swag Kits</li>
@@ -2967,7 +2967,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
                   <li>Wolfram Award [ Each Member ]</li>
                   <li>Exclusive Mentorship Seminar by HeadStart</li>
                   <li>Bugsee 100$ Credit for Each Member</li>
-                  <li>Free Access Egghead.io Platform</li>
+                  <li>Free Access Egghead.io Platform x 2</li>
                   <li>Swag Kits</li>
                 </ul>
               </div>
