--- a/index.html
+++ b/index.html
@@ -2370,7 +2370,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
 
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
             <center>
-            <div class="giftcard" id="giftcard1">
+            <div class="giftcard">
               <div class="upper-content">
                   <h1>All-Girls Teams</h1>
               </div>
@@ -2378,7 +2378,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
               <div class="overlay-content" align="left">
              
                <ul>
-                <li>Cash Prize : Rs. 6000</li>
+                <li>Cash Prize : Rs. 5000</li>
                 <li>Letter of Appreciation</li>
                 <li>Wolfram Award [ Each Member ]</li>
                 <li>Free Access Egghead.io Platform x 1</li>
