Remove next button effect from mobile

--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
       }
     },12000)
       
-    function myclick(a)
+    function myclickfun(a)
     {
       if($(window).width()<=800){
       window.i=a
@@ -1316,15 +1316,15 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
       <div class="events">
 
         <ul style="list-style-type:none;">
-          <li><a class="id1" onclick="myclick(1)" href="#0" data-date="29/08/2020" class="selected">29 Aug</a></li>
-          <li><a class="id1"  onclick="myclick(2)" href="#0" data-date="30/08/2020">30 Aug</a></li>
-            <li><a class="id1"  onclick="myclick(3)" href="#0" data-date="31/08/2020">31 Aug</a></li>
-          <li><a class="id1"  onclick="myclick(4)" href="#0" data-date="01/09/2020">1 Sep</a></li>
-          <li><a class="id1"   onclick="myclick(5)" href="#0" data-date="02/09/2020">2 Sep</a></li>
-          <li><a  class="id1"  onclick="myclick(6)"href="#0" data-date="03/09/2020">3 Sep</a></li>
-          <li><a  class="id1"  onclick="myclick(7)"href="#0" data-date="04/09/2020">4 Sep</a></li>
-          <li><a class="id1"  onclick="myclick(8)" href="#0" data-date="05/09/2020">5 Sep</a></li>
-          <li><a class="id1"  onclick="myclick(9)"href="#0" data-date="06/09/2020">6 Sep</a></li>
+          <li><a class="id1" onclick="myclickfun(1)" href="#0" data-date="29/08/2020" class="selected">29 Aug</a></li>
+          <li><a class="id1"  onclick="myclickfun(2)" href="#0" data-date="30/08/2020">30 Aug</a></li>
+            <li><a class="id1"  onclick="myclickfun(3)" href="#0" data-date="31/08/2020">31 Aug</a></li>
+          <li><a class="id1"  onclick="myclickfun(4)" href="#0" data-date="01/09/2020">1 Sep</a></li>
+          <li><a class="id1"   onclick="myclickfun(5)" href="#0" data-date="02/09/2020">2 Sep</a></li>
+          <li><a  class="id1"  onclick="myclickfun(6)"href="#0" data-date="03/09/2020">3 Sep</a></li>
+          <li><a  class="id1"  onclick="myclickfun(7)"href="#0" data-date="04/09/2020">4 Sep</a></li>
+          <li><a class="id1"  onclick="myclickfun(8)" href="#0" data-date="05/09/2020">5 Sep</a></li>
+          <li><a class="id1"  onclick="myclickfun(9)"href="#0" data-date="06/09/2020">6 Sep</a></li>
           
         </ul>
 
