girl prize update

--- a/index.html
+++ b/index.html
@@ -2374,10 +2374,10 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
             <center>
             <div class="giftcard">
               <div class="upper-content">
-                  <h1>All-Girls Teams</h1>
+                  <h1>Best All-Girls Teams</h1>
               </div>
               
-              <div class="overlay-content" align="left">
+              <div class="overlay-content" align="left" id="girlsteam">
              
                <ul>
                 <li>Cash Prize : Rs. 5000</li>
