--- a/index.html
+++ b/index.html
@@ -2374,7 +2374,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
             <center>
             <div class="giftcard">
               <div class="upper-content">
-                  <h1>Best All-Girls Teams</h1>
+                  <h1>Best All-Girls Team</h1>
               </div>
               
               <div class="overlay-content" align="left" id="girlsteam">
